deploy/k8s-ms/ingress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-directory-listing: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          # - pathType: Prefix
          #   path: /backend(/|$)(.*)
          #   backend:
          #     service:
          #       name: catalog-ms-service
          #       port:
          #         number: 8080
          - pathType: Prefix
            path: /catalog(/|$)(.*)
            backend:
              service:
                name: catalog-ms-1-service
                port:
                  number: 4000
          - pathType: Prefix
            path: /?(.*)
            # path: /
            backend:
              service:
                name: catalog-fe-service
                port:
                  number: 8080
---
